# vbwd-plugin-bot-meinchat

./: README.md  __init__.py  admin-config.json  config.json  populate_db.py  pyproject.toml
.github/workflows/: tests.yml
bot_meinchat/: routes.py
bot_meinchat/models/: __init__.py  conversation_style.py
bot_meinchat/repositories/: __init__.py  conversation_style_repository.py
bot_meinchat/services/: inbound_hook.py  inbound_pipeline.py  meinchat_message_sender.py  meinchat_provider.py  message_sender.py  protocol_selector.py  style_seed.py  style_token_validation.py
bot_meinchat/services/data_exchange/: __init__.py  bot_meinchat_exchangers.py
docs/: overview.md
docs/import/: README.md
docs/import/bot-conversation-styles/: default-style.json
migrations/versions/: 20260611_1100_bot_style.py
tests/: conftest.py
tests/integration/: test_consultant_round_trip.py  test_conversation_style_exchanger.py  test_conversation_style_repository.py  test_conversation_style_routes.py  test_meinchat_room_round_trip.py  test_meinchat_round_trip.py  test_populate_db_entrypoint.py  test_populate_provisions_bot_user.py
tests/unit/: test_inbound_hook.py  test_inbound_hook_room.py  test_meinchat_provider.py  test_meinchat_provider_meta.py  test_meinchat_provider_room.py  test_plugin_config.py  test_protocol_selection.py  test_style_token_validation.py
